Include chat app

--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -30,6 +30,8 @@ head
   link(rel='stylesheet', href='/lib/tether-shepherd/dist/css/shepherd-theme-arrows.css')
   link(rel='stylesheet', href='/lib/tether-shepherd/dist/css/shepherd-theme-default.css')
 
+  script(src='https://www.gstatic.com/firebasejs/3.6.9/firebase.js')
+
 
   //if lt IE 9
     script(src='http://html5shim.googlecode.com/svn/trunk/html5.js')
