--- a/public/views/app.html
+++ b/public/views/app.html
@@ -1,6 +1,6 @@
 </script>
 <!-- navbar starts here -->
-<div landing id="main-bod">
+<div id="main-bod">
   <!-- Fixed Logo & Menu Bar Start -->
   <div class="navigationDiv row ">
     <div class="col-md-3 col-xs-12">
