--- a/public/views/app.html
+++ b/public/views/app.html
@@ -64,5 +64,7 @@
       <h4><span class="text">You are about starting a new Game Session... A minimum of 3 players is needed to start the game</span></h4>
     </div>
   </div>
+  <chat></chat>
 </div>
 <script type="text/javascript" src="../js/modal.js"></script>
+</div>
