feature(redesign-auth-screen): add hello to bower.json

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Ubuntu|Courgette);
-@import url(http://weloveiconfonts.com/api/?family=entypo);
+@import url(https://weloveiconfonts.com/api/?family=entypo);
 
 
  [class*="entypo-"]:before {
