feature(start-game-modal): start-game-modal

--- a/public/views/app.html
+++ b/public/views/app.html
@@ -13,7 +13,6 @@
           <a href="https://twitter.com/share" class="share-button-app" data-url="http://cfh.io"
             data-text="Cards for Humanity: A Game for Horrible People Desperately Trying to do Good"
             data-related="CFH_App"><img src="img/twitter.png" /></a>
-
           <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } } (document, 'script', 'twitter-wjs');</script>
 </li>
 <li>
@@ -35,7 +34,6 @@
 </div>
 </div>
 <!-- navbar ends here -->
-
 <div id="app-container" ng-controller="GameController">
   <div id="gameplay-container" class="upper_game_top_margin">
     <div id="upper-gameplay-container">
@@ -54,3 +52,17 @@
     <answers></answers>
   </div>
 </div>
+<div id="app-container" ng-controller="GameController">
+  <!-- The Modal -->
+  <div id="myModal" class="modal-sm">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <div class="modal-head">
+        <span class="close">&times;</span>
+        <h2><span class="header-text">Welcome..</span></h2>
+      </div>
+      <h4><span class="text">You are about starting a new Game Session... A minimum of 3 players is needed to start the game</span></h4>
+    </div>
+  </div>
+</div>
+<script type="text/javascript" src="../js/modal.js"></script>
