feature(game):  add shepherd tour app for ui touring

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -43,3 +43,7 @@ script(type='text/javascript', src='/socket.io/socket.io.js')
 
 //HelloJS
 script(type='text/javascript', src='/lib/hello/dist/hello.all.min.js')
+
+// Shepherd
+script(type='text/javascript', src='/lib/tether-shepherd/dist/js/tether.js')
+script(type='text/javascript', src='/lib/tether-shepherd/dist/js/shepherd.js')
