--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -27,6 +27,8 @@ head
   link(rel='stylesheet', href='/css/common.css')
   link(rel='stylesheet', href='/css/animate.css')
   link(rel='stylesheet', href='/css/style.css')
+  link(rel='stylesheet', href='/lib/tether-shepherd/dist/css/shepherd-theme-arrows.css')
+  link(rel='stylesheet', href='/lib/tether-shepherd/dist/css/shepherd-theme-default.css')
 
 
   //if lt IE 9
