--- a/public/views/answers.html
+++ b/public/views/answers.html
@@ -79,6 +79,7 @@
         game!
       </li>
     </ol>
+    <button ng-click="startTour()">Screen Tour</button>
   </div>
 </div>
 <div id="game-end-container" ng-show="game.state === 'game ended' || game.state ==='game dissolved'">
