--- a/public/css/style.css
+++ b/public/css/style.css
@@ -437,10 +437,6 @@ z-index:250;
    cursor: pointer;
  }
 
- .sign-up-btn-landing:hover {
-  background:#072f70;
- }
-
   /*#sign-up-btn-other {
    display: inline-block;
    border-radius: 8px;
@@ -1949,6 +1945,7 @@ margin:0 auto !important;
  display: none !important;
 }
 
+
 /*** Start-Game Css **/
 /*The Modal (background) */
 .modal-sm {
@@ -2003,6 +2000,7 @@ iframe{
   height:auto;
   overflow:hidden;
 }
+
 
 iframe{
   width:100%;
@@ -2167,3 +2165,45 @@ margin: 0px !important;
   }
 
 }
+
+/*** Start-Game Css **/
+/*The Modal (background) */
+.modal-sm {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+/* Modal Content/Box */
+.modal-content {
+  background-color: white;
+  margin: 35% auto;
+  /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  color: #002266;
+}
+/* The Close Button */
+.close {
+  color: #002266;
+  float: right;
+  font-size: 35px;
+  font-weight: bold;
+}
+.close:hover {
+  color: lightblue;
+  text-decoration: none;
+  cursor: pointer;
+}
+.header-text {
+  margin-left: 35%;
+}
+/*** End of  Start-Game Css **/
+
