--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,5 +1,5 @@
 <script></script>
-<div landing id="main-bod">
+<div landing id="main-bod" ng-controller="IndexController">
   <!-- Fixed Logo & Menu Bar Start -->
   <div class="navigationDiv row ">
     <div class="col-md-3 col-xs-12">
@@ -19,7 +19,7 @@
                   <li><a href="#!/signin">Sign In</a></li>
                 </span>
 <span ng-hide="showOptions">
-                  <li><a href="/signout">Sign Out</a></li>
+                  <li><a href="" ng-click="logout()">Sign Out</a></li>
                 </span>
 
 <li><a href="/play"><button class="play_button btn"> Play </button</a></li>
