--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -13,6 +13,7 @@ script(type='text/javascript', src='/lib/bootstrap/dist/js/bootstrap.js')
 script(type='text/javascript', src='https://code.angularjs.org/1.1.5/angular.js')
 script(type='text/javascript', src='https://code.angularjs.org/1.1.5/angular-resource.js')
 script(type='text/javascript', src='https://code.angularjs.org/1.1.5/angular-cookies.js')
+script(type='text/javascript', src='/lib/angular-jwt/dist/angular-jwt.min.js')
 
 //Angular UI
 script(type='text/javascript', src='/lib/angular-bootstrap/ui-bootstrap-tpls.js')
