feature(redesign): add chat directive

--- a/public/views/app.html
+++ b/public/views/app.html
@@ -52,7 +52,10 @@
       <answers></answers>
     </div>
   </div>
-
+  <chat></chat>
+</div>
+<div id="app-container" ng-controller="GameController">
+  <!-- The Modal -->
   <div id="myModal" class="modal-sm">
     <!-- Modal content -->
     <div class="modal-content">
