bug(fonticon-heroku): add font folder

--- a/public/views/signin.html
+++ b/public/views/signin.html
@@ -23,11 +23,11 @@
     <form>
       <div class="txt">
         <input id="email" name="email" ng-model="login_email"  type="text" placeholder="Email" required novalidate />
-        <label for="user" class="entypo-user"></label>
+        <label for="user" class="icon-user"></label>
       </div>
       <div class="txt">
         <input id="pwd" type="password" ng-model="login_password" placeholder="Password" name="password" required novalidate />
-        <label for="pwd" class="entypo-lock"></label>
+        <label for="pwd" class="icon-lock"></label>
       </div>
       <div class="sign-error" ng-show="showError()">
         <span>Please check your username/password and try again.</span>
