--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -22,19 +22,19 @@
       </div>
       <div class="txt">
         <input id="name" name="name" ng-model="name" type="text" placeholder="Fullname" required novalidate />
-        <label for="user" class="entypo-user"></label>
+        <label for="user" class="icon-user"></label>
       </div>
       <div class="txt">
         <input id="username" name="username" ng-model="username" type="text" placeholder="Username" required novalidate />
-        <label for="user" class="entypo-user"></label>
+        <label for="user" class="icon-user"></label>
       </div>
       <div class="txt">
         <input id="email" name="email" ng-model="email" type="text" placeholder="Email" required novalidate />
-        <label for="user" class="entypo-user"></label>
+        <label for="user" class="icon-mail"></label>
       </div>
       <div class="txt">
         <input id="pwd" type="password" ng-model="password" placeholder="Password" name="password" required novalidate />
-        <label for="pwd" class="entypo-lock"></label>
+        <label for="pwd" class="icon-lock"></label>
       </div>
       <div id="contain-avatars">
         <ul class="avatar-list">
