bug(fix-fonticon): update chat heigth and background img

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1475,7 +1475,7 @@ z-index:250;
    margin: 0;
    padding: 0;
    height: 100%;
-   background: url("../img/wood.png");;
+   background: url("../img/wood1.png");;
  }
 
  .upper_game_top_margin {
@@ -2047,7 +2047,7 @@ iframe{
   right: 0;
   bottom:0;
   transition: all .5s;
-  height:91.2%;
+  height:650px;
 }
 
 #chat-title {
