feature(emoji): require Js and css files

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -8,6 +8,8 @@ script(type='text/javascript', src='/lib/underscore/underscore-min.js')
 
 //Bootstrap
 script(type='text/javascript', src='/lib/bootstrap/dist/js/bootstrap.js')
+script(type='text/javascript', src='/lib/emoji/dist/emojionearea.min.js')
+
 
 //AngularJS
 script(type='text/javascript', src='https://code.angularjs.org/1.1.5/angular.js')
