feature(emoji): add Js and css file

--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -24,7 +24,7 @@ head
   meta(property='fb:admins', content='APP_ADMIN')
 
   link(rel='stylesheet', href='/lib/bootstrap/dist/css/bootstrap.css')
-  link(rel='stylesheet', href='/emoji/dist/emojionearea.min.css')
+  link(rel='stylesheet', href='/css/emojionearea.min.css')
    link(rel="stylesheet" ,href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css")
   link(rel='stylesheet', href='/css/common.css')
   link(rel='stylesheet', href='/css/animate.css')
