--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,9 +12,27 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'fa';
+  src: url('../font/fontello3.eot?51921264');
+  src: url('../font/fontello3.eot?51921264#iefix') format('embedded-opentype'),
+       url('../font/fontello3.woff2?51921264') format('woff2'),
+       url('../font/fontello3.woff?51921264') format('woff'),
+       url('../font/fontello3.ttf?51921264') format('truetype'),
+       url('../font/fontello3.svg?51921264#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
  [class*="icon-"]:before {
      font-family: 'fontello', sans-serif;
  }
+
+ [class*="fa-"]:before {
+     font-family: 'fa', sans-serif;
+ }
+
+ .fa-down-open:before { content: '\e800'; } /* '' */
 
  #info-container {
    overflow: scroll;
@@ -1475,7 +1493,7 @@ z-index:250;
    margin: 0;
    padding: 0;
    height: 100%;
-   background: url("../img/wood1.png");;
+   background: url("../img/wood1.png");
  }
 
  .upper_game_top_margin {
@@ -1514,7 +1532,7 @@ z-index:250;
  }
 
  #social-bar-container {
-   top:0 !important;
+   top:13px !important;
  }
 
  .app-menu li{
@@ -2032,6 +2050,7 @@ iframe{
 #app-container{
    width:79% !important;
    margin-left:45px !important;
+   float: left;
 }
 
 #chat-container {
@@ -2042,12 +2061,13 @@ iframe{
   border-bottom:5px solid #072f70;
   width:17%;
   padding:0px !important;
-  float: right;
-  position: fixed;
-  right: 0;
+  right:0;
   bottom:0;
+  position: relative;
+  float:right;
+  clear: right;
+  height:660px;
   transition: all .5s;
-  height:650px;
 }
 
 #chat-title {
@@ -2060,7 +2080,8 @@ iframe{
 }
 
 #chat-body {
-  height:530px !important;
+  position: relative;
+  height:450px;
   width:100%;
   overflow-y: scroll;
   box-shadow: 0px 0px 0px 5px #072f70;
@@ -2068,7 +2089,8 @@ iframe{
 
 
  #chat-footer{
-   height:auto;
+   position: relative;
+  height:30% !important;
   width:100%;
   margin-bottom: 0px !important;
  }
@@ -2111,7 +2133,7 @@ h1, h2, h3, h4, h5, h6 {
    .message-text {
      max-width:100%;
      word-break:break-all;
-    padding:0px 10px 0px 10px;
+    padding:0px 5px 0px 5px;
    }
 
 
@@ -2227,3 +2249,15 @@ margin: 0px !important;
   height:215px !important;
 }
 
+#chat-footer textarea{
+  height:120px;
+  padding:10px;
+  border-top:9px solid #002266;
+}
+
+.chat-message pre {
+  text-align: justify;
+  border:0;
+  background: transparent;
+  font-family: sans-serif;
+}
