--- a/public/views/app.html
+++ b/public/views/app.html
@@ -10,11 +10,25 @@
     <div class="col-md-5 col-xs-12 nav navmenu ">
       <ul class="app-menu text-center">
         <li>
+          <button id="gameLogButton" data-target="#bs-example-modal-sm" class="btn" data-toggle="modal" ng-click="allGameRecords()">
+            Game Log
+          </button>
+        </li>
+        <li>
           <a href="https://twitter.com/share" class="share-button-app" data-url="http://cfh.io"
             data-text="Cards for Humanity: A Game for Horrible People Desperately Trying to do Good"
             data-related="CFH_App"><img src="img/twitter.png" /></a>
             <script>
-              !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } } (document, 'script', 'twitter-wjs');
+              ! function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0],
+                  p = /^http:/.test(d.location) ? 'http' : 'https';
+                if (!d.getElementById(id)) {
+                  js = d.createElement(s);
+                  js.id = id;
+                  js.src = p + '://platform.twitter.com/widgets.js';
+                  fjs.parentNode.insertBefore(js, fjs);
+                }
+              }(document, 'script', 'twitter-wjs');
             </script>
         </li>
         <li>
@@ -52,10 +66,6 @@
       <answers></answers>
     </div>
   </div>
-  <chat></chat>
-</div>
-<div id="app-container" ng-controller="GameController">
-  <!-- The Modal -->
   <div id="myModal" class="modal-sm">
     <!-- Modal content -->
     <div class="modal-content">
@@ -65,6 +75,9 @@
       </div>
       <h4><span class="text">You are about starting a new Game Session... A minimum of 3 players is needed to start the game</span></h4>
     </div>
+  </div>
+  <chat></chat>
+  <div ng-include="'./views/game-log.html'">
   </div>
 </div>
 <script type="text/javascript" src="../js/modal.js"></script>
