--- a/public/views/answers.html
+++ b/public/views/answers.html
@@ -53,16 +53,31 @@
 <div id="info-container" ng-show="game.state === 'awaiting players'">
   <div id="inner-info">
     <div id="searchContainer" style="display: none">
-      <div class="col-lg-6" style="margin: 0 25%">
+      <div class="col-lg-6" style="margin: 0 15%; width: 70%;">
         <div ng-repeat="players in invitedPlayers" style="margin-top: 2px;">{{players}} has been sent an invite.</div>
-        <div class="input-group">
-          <input type="text" class="form-control" ng-keyup="playerSearch()" ng-model="inviteeEmail" placeholder="Search for friends to invite">
-          <span class="input-group-btn">
-            <button class="btn btn-default"  type="button" ng-click="sendInvite()">Invite</button>
-          </span>
+        <div>
+          <div class="dropdown">
+            <button style="float: left" class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              Friends
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+            </ul>
+          </div>
+          <div class="input-group">
+            <input type="text" class="form-control" ng-keyup="playerSearch()" ng-model="inviteeUsername" placeholder="Search for friends to invite">
+            <span class="input-group-btn">
+              <button class="btn btn-default"  type="button" ng-click="sendInvite()">Invite</button>
+            </span>
+          </div>
         </div>
         <div ng-if="searchResults.length !== 0" style="height: 135px; background-color: lightgray; text-align: left; overflow: scroll; border-radius: 2px 2px 4px 4px">
-          <div class="search-result" ng-repeat="result in searchResults" ng-click="selectEmail(result.email)">{{result.email}}</div>
+          <div class="search-result" ng-repeat="result in searchResults" ng-click="selectUser(result)">{{result.username}}</div>
         </div>
       </div>
     </div>
